# DarkSoulsItemRandomizer

./: .gitignore  pyproject.toml
application/: launch_randomizer.py
src/item_randomizer/: __init__.py  base_param.py  chr_init_param.py  chr_setup.py  item_lot_formatter.py  item_lot_param.py  item_table.py  items_setup.py  key_items_setup.py  locations_setup.py  randomize_item_table.py  randomizer_gui.py  randomizer_options.py  shop_lineup_param.py  shops_setup.py
src/item_randomizer/_old_version/: README.md  chr_setup.py  item_lot_formatter.py  item_table.py  randomizer_gui.py
src/item_randomizer/binary_handlers/: base_param.py  binary_tools.py  bnd_rebuilder.py  chr_init_param.py  dcx_handler.py  item_lot_param.py  shop_lineup_param.py  util.py
src/item_randomizer/util/: dataclass_tools.py  oneshot_converters.py
tests/test_refactoring/: README.MD  test_chr_init_param.py  test_chr_setup.py  test_items_setup_match.py  test_locations_setup_match.py  test_randomizer_options.py  test_shops_setup_match.py
