[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name="item_randomizer"
description="Item Randomizer for Dark Souls PTDE and Remaster"
authors = [
    { name="HotPocketRemix"},
    { name="Ducksual" },
]
readme="README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
]
dynamic = ['version']
dependencies = [
    "ordered-set",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "item_randomizer.__version__"}

[project.optional-dependencies]
testing = ["pytest", "pytest-cov"]
dev = ["black"]
build = ["cx-freeze", "pywin32"]

[tool.black]
line-length = 88
target-version = ['py311']
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
(
  old_version/*  # Don't autoformat the old version folder
)
'''